Tests/Lite/Lite/test-notes.silt
-- RUN-NOT: --verify scopes

module TestNotes where

-- this note should appear: first declaration of 'id' occurs here
-- this test ensures that the verifier will fail if an unexpected note is
-- produced
id : forall {A : Type} -> A -> A
id x = y -- expected-error {{use of undeclared identifier 'y'}}

id : forall {A : Type} -> A -> A -- expected-error {{cannot shadow name 'id'}}
id x = x
